Fix the cover image resize issue on IE in creating book page

--- a/_sass/includes/modules/_book-blocks.scss
+++ b/_sass/includes/modules/_book-blocks.scss
@@ -384,6 +384,10 @@
                 h4 {
                   text-align: center;
                 }
+
+                img {
+                  width: 100%;
+                }
               }
             }
           }
